# loki-reader-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  build-publish.sh  docker-compose.yaml  example.env  formatting.py  loki_mcp_server.py  nginx-mcp.conf  pyproject.toml  requirements.txt
models/: __init__.py  label_input.py  query_input.py
tests/: test_models.py  test_tools.py
tools/: label_tools.py  query_tools.py
